grafana/grafana_Deployment_grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: grafana
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: grafana
    spec:
      containers:
      - env: []
        image: ghcr.io/ocf/grafana:f0ffec30e52230d7262d5e196a23744d1a693f96
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 3000
