grafana/grafana-web_Service_grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-web
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    transpire.ocf.io/deployment: grafana
