grafana/service_Service_grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: grafana
