grafana/virtual-host-ingress_Ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: virtual-host-ingress
spec:
  ingressClassName: contour
  rules:
  - host: grafana.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.ocf.berkeley.edu
    secretName: service-tls
